Overflow bug fixed, navbar added hover styles

--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,15 @@ ul, li, a {
 li, a {
     text-decoration: none;
     color: white;
+    transition: 0.2s all;
+}
+
+a:hover {
+    color: rgb(178, 178, 178);
+}
+
+a:focus {
+    color: rgb(123, 123, 123);
 }
 
 .navbar {
@@ -104,7 +113,7 @@ h2 {
     width: 150px;
     border: 3px solid darkblue;
     border-radius: 5px;
-    overflow: auto;
+    overflow: hidden;
 }
 
 .listed {
